--- a/src/components/signIn/style.css
+++ b/src/components/signIn/style.css
@@ -9,26 +9,47 @@ body {
 	background-color: #0d1225;
 
 }
+
+
+
+
 .container{
-	
-	color:white;
-	position: absolute;
-	top:25%;
-	left:40%;
+	width: 35%;
+	color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
 }
-.container h1 {
+
+@media screen and (max-width: 750px){
+	.container{
+		width: 65%;
+	}
+	
+}
+
+@media screen and (max-width: 500px){
+	.container{
+		width: 75%;
+	}
+	
+}
+
+
+.container h2 {
 	font-family: 'Oswald', sans-serif;
-	width:50%;
+	/* width:50%; */
 	display: inline-block;
-	font-size: 40px;
+	font-size: 2rem;
 	border-bottom: 5px solid purple;
 	margin-bottom: 15px;
 	padding: 13px 0px
 }
 .box{
 	width:100%;
-	margin: 22px 0px; 
+	margin: 1rem 0px; 
 	border-bottom: 2px solid purple;
 	
 
@@ -36,10 +57,10 @@ body {
 .box input{
 
 	background:none;
-	width:75%;
+	width:80%;
 	
-	padding:5px 10px;  
-	font-size: 20px;
+	padding:.1rem .1rem;  
+	font-size: 1rem;
 	border: none;
 	outline: none;
 	color: white;
@@ -47,7 +68,7 @@ body {
 }
 .box i {
 	
-	width:25px;
+	width:20%;
 	text-align: center;
 
 
