--- a/src/components/VideoPage/videopage.css
+++ b/src/components/VideoPage/videopage.css
@@ -27,6 +27,11 @@
   width: 80%;
   margin: 1rem;
   font-size: 1.5rem;
+
+}
+
+.func-icon i {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
